# my-playground

./: .gitignore  pyproject.toml
ai-meets-web3/: main.ts  request.http
claude/: main.py  pyproject.toml
crewai-playground/: pyproject.toml
crewai-playground/crew/: agents.py  main.py  tasks.py  tools.py
crewai-playground/crewai-server-demo/crewai-stuff/: agents.py  main.py  tasks.py  tools.py
crewai-playground/crewai-server-demo/server/: Dockerfile  app.py
docs/: README.md
docs/provision-apim/: README.md
expert_python/: interface.py  interface_with_protocol.py  pyproject.toml  waiters.py
llamaindex/: pyproject.toml
llamaindex/notebook/: agentic_pipeline.ipynb  query_pipeline.ipynb
llm_user_interupt/: chat_agent.py  main.py  pyproject.toml
llm_user_interupt/prompt/: controller.py
llm_with_db/: main.py  pyproject.toml
llm_with_db/db/cosmos/: cosmos_manager.py
llm_with_db/db/postgres/: postgres_manager.py
llm_with_db/docs/diagrams/: llm_with_db.py  llm_with_db_diagram.py  llm_with_external_files.py  llm_with_message_db.py
llm_with_db/thread/: conversation_thread.py
ms_learn/bicep_learn/: main.bicep  main.parameters.dev.json
ms_learn/bicep_learn/modules/: appService.bicep
openai_playground/: main.py  pyproject.toml
slack_with_genai/: Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
slack_with_genai/service/: data_service.py
terraform-book/: main.tf
